--- a/css/main.css
+++ b/css/main.css
@@ -635,7 +635,7 @@ div:first-child + div >div.check-item-image{
 .tab.active { background: #7f7f7f;  position: relative; }
 .tab a.active { color:#FFE100}
 .tab-container .panel-container { background: #123; border: solid #666 1px; padding: 10px; -moz-border-radius: 0 4px 4px 4px; -webkit-border-radius: 0 4px 4px 4px; }
-.tab-container p{color: #9e9e9e; font-size:14px}
+.tab-container p{color: #9e9e9e; font-size:14px; line-height:18px}
 .tabbed-content a{color:#151515; text-decoration:underline}
 .tab-container h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
 .tab-container h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
@@ -648,7 +648,7 @@ div:first-child + div >div.check-item-image{
 #q-a-form-content p {font-size: 12px; float: left; clear: both;}
 #q-a-form-content input{height: 31px; line-height:31px; background-color: #dddddd; border: 1px solid #cacaca; padding: 2px;float: left; margin-bottom: 15px; display:block}
  #q-a-form-content .yellow-btn { background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
-#q-a-form-content textarea{background-color: #dddddd; border: 1px solid #cacaca; width:445px}
+#q-a-form-content textarea{background-color: #dddddd; border: 1px solid #cacaca; width:60%; margin-bottom: 15px;}
 
 /* content template */
 #content-container{overflow: hidden;}
@@ -667,29 +667,41 @@ div:first-child + div >div.check-item-image{
 #form-builder label {line-height: 31px; height: 31px; display: block; float: left; margin-bottom: 15px; clear: both; width: 220px; font-size: 12px;}
 #form-builder p {font-size: 12px; float: left; clear: both;}
 #form-builder input{height: 31px; line-height:31px; background-color: #dddddd; border: 1px solid #cacaca; padding: 2px;float: left; margin-bottom: 15px; display:block}
-#form-builder textarea{background-color: #dddddd; border: 1px solid #cacaca; width:445px}
+#form-builder textarea{background-color: #dddddd; border: 1px solid #cacaca;float: left; width: 60%; margin-bottom: 15px;}
 #form-builder select {float: left; background: transparent; border: none; height: 30px; border-radius: 0; padding: 5px; margin-left: 2px; background: #dddddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0px; -webkit-appearance: none; -moz-appearance: none; text-indent: 0.01px; text-overflow: ""; width: 144px;background-position: -126px 0;margin-left: 0px;margin-bottom:20px;margin-right:15px; padding-right:10px}
 #form-builder button{ background: transparent url(../img/ui/button.png) 0px 14px no-repeat; height: 62px; top:1px; font-family: HelveticaNeueCE-Bold; width: 157px; margin-left: -5px; text-align: left; padding-left: 12px; cursor:pointer; border:0; position:relative}
 #form-builder input[type=checkbox], #form-builder input[type=radio]{background-color:transparent; border:0}
 #content-iframe iframe{width:100%; margin-top:30px}
 
 /* contact us */
-#contact-us-container {margin:45px; overflow:hidden}
+.contact-us{margin:45px; overflow:hidden}
 .wysiwyg-contact-top-left{float:left; width:50%}
 .wysiwyg-contact-top-right{float:right; width:50%; text-align:right; margin-top:40px}
-.wysiwyg-contact-top-right p {margin:4px 0 0 auto}
-#contact-us-container .left-column, #contact-us-container .right-column {width:372px; }
-#contact-us-container .left-column {float:left; padding-left:22px}
-#contact-us-container .right-column {float:right; padding-right:22px}
+.wysiwyg-contact-top-right p {margin:4px 30px 0 auto}
+.contact-us .left-column, .contact-us .right-column {width:372px; }
+.contact-us .left-column {float:left; padding-left:22px}
+.contact-us .right-column {float:right; padding-right:22px}
+#further-info{background-image:url(../img/ui/lower-bg-grad.png); background-repeat:repeat-x; background-color:#E9E9E9; padding:45px 67px; overflow:hidden}
+#further-info h2{font-size:17px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+#further-info h3{font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.further-info-column{width:33%; float:left;}
+.further-info-column .col1{margin:0 44px 0 0}
+.further-info-column .col2{margin:0 44px}
+.further-info-column .col3{margin:0 0 0 44px}
+#further-info a{color:#151515; text-decoration:underline}
+
 
 /*wysiwyg*/
-#contact-us-container  p, #content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
-#contact-us-container  a, #content-template-wysiwyg a{color:#151515; text-decoration:underline}
-#contact-us-container  h3, #content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
-#contact-us-container  h2, #content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
-#contact-us-container  ul, #content-template-wysiwyg ul{font-size: 14px}
-.v-centered-icon-text{height:29px; line-height:29px; float:left; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; width:200px}
-#contact-us-container .icons img{float:left; padding-right: 5px}
+.wysiwyg-area{margin-bottom:40px}
+.contact-us p, #content-template-wysiwyg p{color: #9e9e9e; font-size:14px}
+.contact-us a, #content-template-wysiwyg a{color:#151515; text-decoration:underline}
+.contact-us h3, #content-template-wysiwyg h3, #form-builder h3 {font-size:15px; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.contact-us h2, #content-template-wysiwyg h2 {font-size:17px;  font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;}
+.contact-us ul, #content-template-wysiwyg ul{font-size: 14px}
+.v-centered-icon-text{height:29px; line-height:29px; float:left; font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif; width:170px;}
+.contact-us .icons img{float:left; padding-right: 5px}
+.contact-us .icons {height:29px}
+
 
 
 /**
