--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ select{}
 #search-box input{border:0; padding:5px; background:none; width:225px; color:#656565;}
 #top-search-glass{position:absolute; top:4px; right:4px; padding:5px; cursor:pointer}
 #ajax-menu-container{top:99px; right:15px; position:absolute; z-index:9999; color:#171717; display:none}
-.xclose{float: right; padding: 10px 10px 0 0; cursor:pointer}
+.yt-xclose, .xclose{float: right; padding: 10px 10px 0 0; cursor:pointer}
 
 /*menu*/
 #main-menu{top:66px; left:170px; position:absolute;}
@@ -204,7 +204,7 @@ a.social-icon.youtube:hover {background-position: -60px 0px;}
 	padding:15px;
 }
 
-#category-grey-bg-wrapper, #grey-bg-wrapper, #contact-grey-bg-wrapper{
+#video-grey-bg-wrapper, #category-grey-bg-wrapper, #grey-bg-wrapper, #contact-grey-bg-wrapper{
 	background:#f6f6f6 url(../img/ui/header-gradient.png) repeat-x;
 	margin: 0;
 	overflow: auto;
@@ -515,6 +515,28 @@ div:first-child + div >div.check-item-image{
 .category-item{width:319px; height:294px; overflow:hidden; float:left;}
 .category-title{margin:5px 0}
 .category-blurb{margin:0 15px 0 0}
+
+/*video listing template*/
+#breadcrumb{height:31px; background-image:url(../img/ui/bread-crumb-bg-grad.gif); background-repeat:repeat-x; line-height:31px; padding-left:15px;}
+#breadcrumb a{font-size:0.7em; line-height:31px}
+#video-wysiwyg{margin:45px 45px 0 45px}
+#video-wysiwyg p{color:#9e9e9e; font-size:0.9em; line-height:1.5em}
+.video-item p{color:#9e9e9e; font-size:0.85em; line-height:1.3em; margin: 5px 0}
+#video-wysiwyg h2{font-family: HelveticaNeueCE-Bold, Helvetica, Arial, sans-serif;font-size:24px;}
+.non-home{padding:15px;background-color:#e9e9e9;background-image:url(../img/ui/social-section-grad-top.gif);background-repeat:repeat-x;}
+#video-list{padding:0 26px 30px 41px; overflow:hidden; margin-top:45px}
+.video-item{width:319px; height:334px; overflow:hidden; float:left; cursor:pointer}
+.video-title{margin:5px 0}
+.video-blurb{margin:0 15px 0 0}
+.video-item h4{font-size:16px; font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif; color:#9e9e9e; margin:0; font-weight:normal}
+.video-item h5{display:none}
+/*video overlay*/
+#yt-overlay {background-image:url(../img/ui/yt-bg.png); height:100%; width:100%; position:fixed; top:0; left:0; display:none; }
+#yt-outer-frame{background-color:#ffffff; height:601px; width:852px; top: 0; left:0; right: 0; bottom:0; position:absolute; margin:auto;}
+#yt-inner-frame{margin:15px}
+#yt-overlay h2{margin:0}
+#yt-overlay h3{font-family: HelveticaNeueCE-Roman, Helvetica, Arial, sans-serif; color:#9e9e9e; margin:0; font-weight:normal}
+#yt-overlay iframe{bottom:15px; position:absolute}
 
 
 /**********************************************************/
