--- a/templates/xhtml-templates/10.2.2-checkout-sign-in.html
+++ b/templates/xhtml-templates/10.2.2-checkout-sign-in.html
@@ -26,9 +26,8 @@
 				<div id="content" class="checkout-pages">
 					<div id="ad-title-space">
 						<h1 class="check-page-title">
-							SiS Checkout
+							&nbsp;
 						</h1>
-						<p class="h1-sub-heading grey">Free delivery on all UK orders.</p>
 					</div>
 					<div id="grey-bg-wrapper">
 						<div id="checkout-breadcrumb-menu" class="left grey"><span class="current black">Welcome</span> &raquo; Delivery Address &amp; Delivery Options &raquo; Payment &raquo; Receipt</div>
@@ -38,11 +37,14 @@
 									<h2>Existing Customer</h2>
 									<p>Please enter your existing email and password</p>
 									<div class="error">Sorry, some of your details were incorrect.  Please check your email address and password and try again.</div>
+									<p class="error">Please enter a valid email address</p>
+									<div class="clear"></div>
 									<label for="login-email">Email address</label> 
-									<input id="login-email" type="text" name="checkout-login-email" size="40" />
+									<input id="login-email" type="text" name="checkout-login-email" size="40"  maxlength="128"/>
+									<p class="error">Please enter a password</p>
 									<div class="clear"></div>
 									<label for="login-password">	Password:</label> 
-									<input id="login-password" type="password" name="pwd" size="40" />
+									<input name="pwd" type="password" id="login-password" size="40" maxlength="64" />
 									<button name="login-submit" type="submit" class="yellow-button">Sign In</button>
 									<div class="clear"></div>
 									<p><a href="#" class="link text-button">Forgotten Password?</a></p>
@@ -55,9 +57,11 @@
 									<div class="error clear">The email address entered is already registered.
 										If you have forgotten your password please use the forgotten password link.
 									</div>
-									<label for="new-customer-email">Email address</label> <input  id="new-customer-email" type="text" name="checkout-new-customer-email" size="40" />
+									<p class="error">Please enter a valid email address</p>
 									<div class="clear"></div>
-									<label for="new-customer-password">Password: </label><input id="new-customer-password" type="password" name="pwd" size="40" />
+									<label for="new-customer-email">Email address</label> <input name="checkout-new-customer-email" type="text"  id="new-customer-email" size="40" maxlength="128" />
+									<div class="clear"></div>
+									
 									<button class="yellow-button" name="login-submit" type="submit">continue</button>
 								</form>
 								<form class="guest-login" method="post" action="#">
