--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -13,6 +13,7 @@
 
 <script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script src="../js/main.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -39,8 +40,8 @@
 				<div class="mnu-acc-row-two">
 					<div class="acc-menu-item"><a href="/login/register?redirectto=%2f"><span>Register</span></a></div>
 					<div class="acc-menu-item"><a href="/login?redirectto=%2f"><span>Sign In</span></a></div>
-						<div class="acc-menu-item no-js countries-form">
-						<form id="uk-currency-sel" class="no-js" action="#" method="get" style="display:none">
+						<div id="no-js-mnu" class="acc-menu-item no-js countries-form">
+						<form id="uk-currency-sel" class="no-js" action="#" method="get" style="display:block">
 						<select name="countries-opt">
 							<optgroup label="Countries">
 								<option value="UK" selected="selected">United Kingdom</option>
@@ -80,11 +81,16 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			<div id="countries-selector">
+			<div id="countries-selector" style="display:none">
 				<div id="country-code">UK</div>
 				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="UK" /></div>
 				<div id="country-changer"><img src="../img/flags/button.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
+			<!-- show and hide the correct components depending on JavaScript availability -->
+			<script>
+				document.getElementById('no-js-mnu').style.display = "none";
+				document.getElementById('countries-selector').style.display = "block";
+			</script>
 			<div id="js-countries">
 				<div id="js-countries-inner">
 					<table class="flags" cellspacing="5" border="0">
